--- a/BlazorRealTimeData/appsettings.json
+++ b/BlazorRealTimeData/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=IncomingMessages;trusted_connection=true;Integrated Security=SSPI;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
